--- a/work/mybiblio.bib
+++ b/work/mybiblio.bib
@@ -1,14 +1,3 @@
-@article{multiwordnpiger,
-    author = {Richter F., Fritzinger F., Weller M.},
-    title = {Who Can See the Forest for the Trees? Extracting Multiword Negative Polarity Items from Dependency-Parsed Text}, 
-    journaltitle = {JLCL},
-    location = {М.},
-    year = {2010},
-    pages = {83-110},
-    language = {english},
-    langid = {english}
-}
-
 @misc{alexey,
   author = {Alexey Koshevoy and kategerasimenko and zu-ann and Marc and Maria Terekhina},
   title = {lingcorpora/lingcorpora.py: initial release},
@@ -124,21 +113,21 @@
   doi = {10.5281/zenodo.1289471}
 }
 
-@online{python,
+@manual{python,
     title = {The Python Language Reference},
     author = "{Python Software Foundation}",
     year = {2019},
     url = {https://docs.python.org/3.7/reference/}
 }
 
-@online{leaflet,
+@manual{leaflet,
     title = {Leaflet API reference},
     author = {Vladimir Agafonkin},
     year = {2017},
     url = {https://leafletjs.com/reference-1.5.0.html}
 }
 
-@online{pandas,
+@manual{pandas,
     title = {pandas: powerful Python data analysis toolkit},
     author = {Tom Augspurger and
               William Ayd and
@@ -222,14 +211,14 @@
     url = {https://github.com/Developer66/open-elevation}
 }
 
-@online{legend,
+@manual{legend,
     author = {Colin Talbert},
     title = {How does one add a legend (categorical) to a folium map},
     year = {2018},
     url = {https://nbviewer.jupyter.org/gist/talbertc-usgs/18f8901fc98f109f2b71156cf3ac81cd}
 }
 
-@book{wals,
+@online{wals,
   address   = {Leipzig},
   editor    = {Matthew S. Dryer and Martin Haspelmath},
   publisher = {Max Planck Institute for Evolutionary Anthropology},
@@ -253,7 +242,7 @@
     url = {https://github.com/autotyp/autotyp-data/tree/0.1.0}
 }
 
-@book{afbo,
+@online{afbo,
   address   = {Leipzig},
   editor    = {Frank Seifart},
   publisher = {Max Planck Institute for Evolutionary Anthropology},
@@ -279,7 +268,7 @@
     url = {http://sails.clld.org} 
 }
 
-@book{phoible,
+@online{phoible,
   address   = {Jena},
   editor    = {Steven Moran and Daniel McCloy},
   publisher = {Max Planck Institute for the Science of Human History},
@@ -288,7 +277,7 @@
   year      = {2019}
 }
 
-@online{foliumDocs,
+@manual{foliumDocs,
       author = {Filipe and
                 Martin Journois and
                 Frank and
@@ -322,4 +311,104 @@
     title = {Folium},
     year = {2019},
     url = {https://python-visualization.github.io/folium/index.html}
+}
+
+@article{climatesSonorants,
+    author = {Robert L. Munroe and John G. Fought and Ronald K. S. Macaulay},
+    title ={Warm Climates and Sonority Classes: Not Simply More Vowels and Fewer Consonants},
+    journal = {Cross-Cultural Research},
+    volume = {43},
+    number = {2},
+    pages = {123-133},
+    year = {2009},
+    doi = {10.1177/1069397109331485},
+
+    URL = { 
+            https://doi.org/10.1177/1069397109331485
+        
+    },
+    eprint = { 
+            https://doi.org/10.1177/1069397109331485
+        
+    }
+    ,
+        abstract = { Previous research has shown that speakers in warm-climate languages make use of relatively more vowels, and speakers in cold-climate languages relatively more consonants. The high sonority (audibility) of the vowel, and its adaptive value under certain conditions, have been invoked to account for its greater frequency in warmer climates. We show here, however, that the above generalization is over-broad, and that sound classes vary across climate zones in complex ways. One new finding is that speakers in warm-climate languages make more use of the so-called “sonorant” consonants, that is, consonants with some of the qualities of vowels. We offer a provisional framework that continues to find value in the concept of sonority and its relation to climate, but attempts to incorporate the new results and provide a more comprehensive explanation. }
+}
+
+@article{ejectives,
+    author = {Caleb Everett},
+    title = {Evidence for Direct Geographic Influences on Linguistic Sounds: The Case of Ejectives},
+    year = {2013},
+    publisher = {PLoS ONE},
+    url = {https://doi.org/10.1371/journal.pone.0065275},
+    doi = {10.1371/journal.pone.0065275}
+}
+
+@article{wals7,
+  address   = {Leipzig},
+  author    = {Ian Maddieson},
+  booktitle = {The World Atlas of Language Structures Online},
+  editor    = {Matthew S. Dryer and Martin Haspelmath},
+  publisher = {Max Planck Institute for Evolutionary Anthropology},
+  title     = {Glottalized Consonants},
+  url       = {https://wals.info/chapter/7},
+  year      = {2013}
+}
+
+@online{saphon,
+  author    = {Lev, Michael and Tammy Stark and Will Chang},
+  publisher = {University of California},
+  title     = {South American Phonological Inventory Database},
+  url       = {http://linguistics.berkeley.edu/ saphon/en/},
+  year      = {2012}
+}
+
+@online{aa,
+  author       = {Chanard, C.},
+  howpublished = {Online: urlhttp://sumale.vjf.cnrs.fr/phono/},
+  title        = {Systèmes Alphabétiques Des Langues Africaines},
+  year         = {2006},
+  url = {http://sumale.vjf.cnrs.fr/phono/}
+}
+
+@online{gm,
+  address   = {Leipzig},
+  editor    = {Moran, Steven and Daniel McCloy and Richard Wright},
+  publisher = {Max Planck Institute for Evolutionary Anthropology},
+  title     = {PHOIBLE Online},
+  url       = {http://phoible.org/},
+  year      = {2014}
+}
+
+@book{ra,
+  author    = {Ramaswami, N.},
+  publisher = {Central Institute of Indian Languages},
+  title     = {Common Linguistic Features in Indian Languages: Phonetics},
+  year      = {1999}
+}
+
+@article{spa,
+  author = {Crothers, John H. and
+            James P. Lorentz and
+            Donald A. Sherman and
+            Marilyn M. Vihman},
+  title  = {Handbook of Phonological Data From a Sample of the World's Languages: A Report of the Stanford Phonology Archive},
+  year   = {1979}
+}
+
+@incollection{upsid,
+  author    = {Maddieson, Ian and Kristin Precoda},
+  booktitle = {UCLA Working Papers in Phonetics},
+  pages     = {104–111},
+  publisher = {Department of Linguistics, UCLA},
+  title     = {Updating UPSID},
+  volume    = {74},
+  year      = {1990}
+}
+
+@online{lingtypologyResearch,
+  author = {Michael Voronov},
+  title = {Data for Lingtypology Demonstrative Studies},
+  year = {2019},
+  url = {https://github.com/OneAdder/lingtypology_research}
 }
